[gd_scene load_steps=8 format=3 uid="uid://bsrvafvvfodxl"]

[ext_resource type="Script" path="res://Inventory/UseMenu.gd" id="1_3j4q8"]
[ext_resource type="LabelSettings" uid="uid://brk3b518ew3w8" path="res://Themes/Font.tres" id="2_wx5yn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v44v"]
bg_color = Color(0.392157, 0.639216, 0.741176, 1)

[sub_resource type="Theme" id="Theme_y4ov3"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_8v44v")

[sub_resource type="SystemFont" id="SystemFont_0cd0i"]
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_tykpx"]
base_font = SubResource("SystemFont_0cd0i")

[sub_resource type="Theme" id="Theme_kkoea"]
default_font = SubResource("FontVariation_tykpx")
default_font_size = 24

[node name="UseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 208.0
script = ExtResource("1_3j4q8")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 117.0
offset_bottom = 158.0
mouse_filter = 1
theme = SubResource("Theme_y4ov3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = ExtResource("2_wx5yn")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="UseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_kkoea")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
disabled = true
toggle_mode = true
text = "Use"
alignment = 0

[node name="SellButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_kkoea")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Sell
"
alignment = 0

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
